2009-01-08  Lars Hartmann  <lars (at) chaotika (dot) org>

	* lib/liblpatom.c renamed REGEXP defines

	* lib/liblpatom.c (__lpatom_parse_suffix): fixed segv

	* lib/liblputil.h (lputil_substr): renamed parameter oes to off
	and oe to len

	* lib/liblputil.h: added comments

	* lib/liblpatom.h: added comments

	* Changelog: started logging to a Changelog

	* lib/Makefile: cleaned it up and made check-syntax CFLAG aware

	* Makefile: added some variables
